--- a/css/feed.css
+++ b/css/feed.css
@@ -117,7 +117,7 @@ th {
     background-color: #f2f2f2;
 }
 
-table h2{
+table span{
     padding: 0px 10px 0px 10px;
     font-size: max(2.5vmin, 12px);
 }
