--- a/css/register.css
+++ b/css/register.css
@@ -77,7 +77,7 @@ main {
     }
 }
 
-#headerText
+.headerText
 {
     font-size: max(9vmin, 80px);
     position: relative;
@@ -124,7 +124,7 @@ main {
     justify-content: space-evenly;
 }
 
-#login1 #headerText{
+#login1 .headerText{
     margin-top: 30px;
     padding-bottom: 100px;
 }
@@ -136,13 +136,16 @@ main {
 }
 
 @media (max-width: 850px) {
-    #login1 #headerText{
-        font-size: 60px;
-    }
     #textBox{
         margin-left: 50px;
         margin-right: 40px;
         transform: translate(0%,-7%);
+    }
+    .headerText{
+        font-size: 60px;
+    }
+    #line1{
+        top:20%;
     }
 }
 
@@ -349,18 +352,6 @@ footer {
 #line2{
     top:30%;
 }
-
-@media (max-width: 850px) {
-    #headerText{
-        font-size: 60px;
-    }
-    #line1{
-        top:20%;
-    }
-}
-
-
-
 
 
 .f-wrapper--2 .flower__leaf--1{
