Checked and resolved all html/css errors, modified profile and collection(4/13/2024)

--- a/css/contact.css
+++ b/css/contact.css
@@ -86,7 +86,7 @@ textarea {
 }
 
 #email_input:not(:focus){
-    background-color: none;
+    background-color: transparent;
 }
 
 #contact_form input[type='text'],[type='email'], select, textarea {
