--- a/css/collection-list.css
+++ b/css/collection-list.css
@@ -1,11 +1,3 @@
-body {
-    margin: 0;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    background: #425a52;
-}
-
 button {
     border: none;
     outline: 0;
@@ -19,10 +11,35 @@ button {
     font-size: 18px;
 }
 
-a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#container{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.63);
+    width: 1000px;
+    border-radius: 22px;
+    border: 2px solid black;
+    box-shadow: 0px 0px 20px rgba(0,0,0,1);
+}
+
+.no-collections-message {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: none; 
+    font-size: 2rem;
+    color: #333;
+    padding: 20px;
+    background-color: #4CAF50;
+    border-radius: 32px;
+    border: 2px solid white;
+    box-shadow: 0 0px 20px rgba(0, 0, 0, 1);
 }
 
 button:hover, a:hover {
@@ -30,28 +47,19 @@ button:hover, a:hover {
 } 
 
 .format-btn {
-    margin: 10px 0;
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
+    font-family: 'Dancing Script', sans-serif;
+    margin: 10px 10px;
+    width:150px;
     line-height: 1.5;
-}
-
-.gutters-sm {
-    margin-right: -8px;
-    margin-left: -8px;
-}
-
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
-    padding-right: 8px;
-    padding-left: 8px;
-}
-
-.mb-3, .my-3 {
-    margin-bottom: 1rem!important;
+    font-size: 20px;
+    border-radius: 10px;
+    background-color:rgb(18, 92, 42) ;
+    box-shadow: 0px 0px 20px rgb(18, 92, 42);
 }
 
 .button-div { 
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
 }
 
 .main-body {
@@ -63,46 +71,66 @@ button:hover, a:hover {
     margin: 20px 0; 
 }
 
+#circleAvatar{
+    border: 5px solid rgb(11, 56, 25);
+    box-shadow: 0px 0px 20px rgba(0,0,0,1);
+    border-radius: 360px;
+    overflow: hidden;
+    height: 150px;
+    width: 150px;
+    margin-right: 30px;
+}
+
+#circleData{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .collections-card {
+    margin-top: 20px;
     display: flex;
+    flex-direction: column;
 
-    align-items: flex-start;
     justify-content: center;
 
-    align-items: center;
-    flex-wrap: wrap;
-    word-wrap: break-word;
-    flex: 1 1 auto;
-    background-clip: border-box;
-    border: 0 solid rgba(0,0,0,.125);
-    position: relative;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-    background-color: #fff; 
-    border-radius: 0.25rem; 
+    box-shadow: 0 0px 20px rgba(0,0,0,1);
+    background-color: #a0e090b9;
+    
+    border-radius: 32px;
+
     padding: 1rem;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06); 
     text-align: center;
-    margin: auto;
-    max-width: 75%; 
-    min-width: 0;
-    overflow: hidden;
+    
+    width: 95%; 
+}
+
+.collections-card:last-child {
+    margin-bottom: 20px;
+}
+
+#socialLinks{
+    border-radius: 0px 0px 32px 32px;
+    margin-top: 0px;
+}
+
+#data{
+    border-radius: 32px 32px 0px 0px;
+}
+
+#profileInfo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .collections-title {
-    margin-top: 0;
+    margin-top: 10px;
+    margin-bottom: 10px; 
     width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 0;
 
-    font-size: 24px;
-    color: #3a3a3a; 
-    margin-bottom: 15px; 
-    text-transform: uppercase; 
+    font-size: 50px;
+    font-weight: bold;
 }
 
 .collection-particularity {
@@ -142,86 +170,98 @@ button:hover, a:hover {
     background-color: #367c39; 
 }
 
-.collection-item {
-    flex-basis: calc(33.333% - 20px);
-    margin: 5px;
-    flex: 1 0 21%;
+/* Links */
+
+#links{
+    display: flex;
+    justify-content: space-evenly;
 }
 
-
-
 .socialMediaIcon2{
-    width: calc(25% - 10px);
-    padding: 10%;
-    border: none;
     background-color: transparent;
+    opacity: 0.5; 
 
-    width: max(3vmin, 25px); 
-    height: max(3vmin, 25px); 
-    margin: auto; 
-    opacity: 0.6; 
+    width:50px;
 
-    display: inline-block;
-    position: relative;
-    width: auto;
-    height: auto;
     transition: opacity 0.3s ease;
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
+}
+
+.line{
+    height:3px;
+    width: 90%;
+    background-color: black;
 }
 
 .socialMediaIcon2:hover{
     opacity: 100%;
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
+    padding: 5px;
+    border-radius: 360px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,1);
 }
 
-
-
-
-
-
-.col {
-    padding: 15px;
-    flex: 2;
+.friend{
+    border:5px solid black;
+    border-radius: 360px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
-.central-column {
-    flex: 3; 
+.friend:hover{
+    opacity: 0.9;
+    box-shadow: 0px 0px 20px rgba(0,0,0,1);
 }
 
-.left-column,
-.right-column {
-    width: 20%; 
-}
-
-.central-column {
-    width: 60%; 
-}
-
-@media (max-width: 768px) {
-    body {
-        font-size: 18px;
-    }
-
-    .card-body,
-    .list-group-item {
-        padding: 1rem;
-    }
-
-    .social-media .socialMediaIcon2,
-    .social-links a {
-        display: block;
-        width: 100%;
-        margin-bottom: 10px; 
-        text-align: center; 
-    }
-
-    .collections-title {
-        margin-top: 10px; 
-        font-size: 20px; 
-    }
-    
-    .button-div button,
-    .profile-header button {
-        width: 100%;
-        margin-bottom: 10px;
+@media (max-width: 1010px) {
+    #container{
+        width: 90%;
     }
 }
 
+@media (max-width: 670px) {
+    #container{
+        width: 95%;
+    }
+    #profileInfo{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #circleAvatar{
+        position: relative;
+        left:15px;
+    }
+    .collections-card{
+        width: 90%;
+    }
+}
+
+#addPlantButton:hover {
+    opacity: 0.9; 
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+}
+
+#addPlantButton {
+    position: fixed;
+    right: 20px;
+    top: 120px;
+    z-index: 1;
+}
+
+.floating-button {
+    background-color: #4caf50;
+    border-radius: 50%; 
+    width: 60px; 
+    height: 60px; 
+    font-size: 36px; 
+    line-height: 40px; 
+    text-align: center; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+    cursor: pointer;
+    z-index: 1000; 
+}
+
+.floating-button:hover {
+    background-color: #66bb6a; 
+}
