--- a/css/collection.css
+++ b/css/collection.css
@@ -5,34 +5,79 @@
     color: #333;
     margin: 0;
     padding: 20px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #4CAF50;
+    border-radius: 32px;
+    border: 2px solid white;
+    box-shadow: 0 0px 20px rgba(0, 0, 0, 1);
 }
 
 /*------------*/
 
+#cont{
+    display: flex;
+    flex-direction: column;
+    width:900px;
+}
+
+#title{ 
+    border: 1px solid black;
+    font-size: 50px;
+    border-radius: 32px 32px 0px 0px;
+    background-color: #a0e090b9;
+    margin-top: 30px;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+    padding: 20px 0px 20px 0px;
+}
+
+#line{
+    margin-top: 10px;
+    margin-bottom: 5px;
+    height: 2px;
+    width: 70%;
+    background-color: black;
+}
+
+#descripton{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+    font-size: 30px;
+    background-color: #a0e090b9;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+    padding: 20px 0px 30px 0px;
+}
+
 .container {
+    border: 1px solid black;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+    border-radius: 0px 0px 32px 32px;
+    background-color: #a0e090b9;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%; 
     max-width: 1200px;
-    margin: auto;
     text-align: center;
     margin-bottom: 20px;
     min-height: calc(100vh - 150px);
 }
 
 #addPlantButton:hover {
-    background-color: var(--secondary-color); 
+    opacity: 0.9; 
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
 }
 
 #addPlantButton {
     position: fixed;
     right: 20px;
-    bottom: 50px;
+    top: 120px;
+    z-index: 1;
 }
 
 #noCollectionsMsg {
@@ -67,3 +112,14 @@
 }
 
 
+@media (max-width: 1000px) {
+    #cont{
+        width:700px;
+    }
+}
+
+@media (max-width: 750px) {
+    #cont{
+        width:95%;
+    }
+}
