--- a/css/hover-cards.css
+++ b/css/hover-cards.css
@@ -4,6 +4,7 @@ figure {
     overflow: hidden;
     cursor: pointer;
     margin: 20px;
+    font-family: 'Dancing Script', sans-serif;
 }
 
 figure > * {
@@ -14,16 +15,16 @@ figure > * {
 figure figcaption {
     display: grid;
     align-items: end;
-    font-family: sans-serif;
     font-size: 2.3rem;
     font-weight: bold;
     color: #0000;
+    color:#cac7ff;
     padding: .75rem;
     background: var(--c,#0009);
     clip-path: inset(0 var(--_i,100%) 0 0);
-    -webkit-mask:
+    /* -webkit-mask:
         linear-gradient(#000 0 0),
-        linear-gradient(#000 0 0);
+        linear-gradient(#000 0 0); */
     -webkit-mask-composite: xor;
     -webkit-mask-clip: text, padding-box;
     margin: -1px;
