--- a/css/profile.css
+++ b/css/profile.css
@@ -1,15 +1,3 @@
-
-body {
-    font-family: 'Arial', sans-serif;
-    color: #333;
-    margin: 0;
-    padding: 20px;
-}
-
-.main-body {
-    padding: 15px;
-}
-
 /*--------CARDS----------*/
 
 .card {
@@ -35,16 +23,6 @@ body {
 }
 
 /*---------UTILS--------*/
-
-.gutters-sm {
-    margin-right: -8px;
-    margin-left: -8px;
-}
-
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
-    padding-right: 8px;
-    padding-left: 8px;
-}
    
 
 .bg-gray-300 {
@@ -125,17 +103,17 @@ body {
 
 /*------------------------*/
 
+#container{
+    display: flex;
+    flex-direction: row;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
     max-width: 75%;
     margin: auto;
     text-align: center;
     overflow: hidden;
-  }
-  
-  .title {
-    color: grey;
-    font-size: 18px;
   }
   
   button {
@@ -160,58 +138,6 @@ body {
   button:hover, a:hover {
     opacity: 0.7;
   } 
-
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-#big-container {
-    display : flex;
-    flex-wrap: wrap;
-    /* flex-direction: column; */
-    border : solid 5px #474544;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 6px;
-    opacity: 80px;
-    justify-content: baseline;
-    /* width: 100%; 
-    max-width: 1200px; */
-    margin: auto;
-    /* flex : 0.3; */
-}
-
-#container {
-    font-family: 'Montserrat', Arial, sans-serif;
-    flex-basis: calc(33.333% - 40px);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-grow: 3;
-    max-width: 100%;
-
-    border: solid 3px #474544;
-    min-width: 33.333%;
-    background-image: linear-gradient(to bottom, #496989, #3f867d, #496989);
-    display: block;
-    margin: 200px;
-    position: relative;
-    background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
-    border-radius: 6%;
-    border: #E2F4C5 2px solid;
-    opacity: 90%;
-
-  }
-  
-
-#container h1 {
-    color: #cac7ff;
-    font-size: 32px;
-    font-weight: 700;
-    letter-spacing: 7px;
-    text-align: center;
-    text-transform: uppercase;
-    margin-top: 50px;
-    margin-bottom: 20px;
-}
 
 
 .profile-container {
@@ -368,19 +294,6 @@ button:hover {
         width: calc(100% - 1rem);
     }
 
-    #big-container {
-        flex-direction: column;
-        margin: 1rem;
-        padding: 1rem;
-    }
-
-    #container {
-      
-        margin: 1rem 0;
-        width: auto;
-        max-width: 100%; 
-    }
-
     .button-div {
         flex-direction: column;
         align-items: center;
@@ -389,11 +302,6 @@ button:hover {
     .list-group-item h6,
     .list-group-item a {
         padding: 15px;
-    }
-
-    .gutters-sm>.col, .gutters-sm>[class*=col-] {
-        
-        padding: 0.5rem;
     }
 
     .central-column,
