--- a/css/template.css
+++ b/css/template.css
@@ -1,8 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
-@font-face {
+/* @font-face {
     font-family: 'Playful';
     src: url('../fonts/Playful/PlayfairDisplay-VariableFont_wght.ttf') format("truetype"),
-}
+} */
 
 .gradient_Text{
     background-image: linear-gradient(#E2F4C5, #a0e090);
