--- a/css/collection-list.css
+++ b/css/collection-list.css
@@ -265,3 +265,105 @@ button:hover, a:hover {
 .floating-button:hover {
     background-color: #66bb6a; 
 }
+
+
+
+
+/* Hidden by default */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px); 
+
+  }
+  
+  /* Modal content */
+  .modal-content {
+    background-color: white;   /*#a0e090b9*/
+
+    padding: 20px 20px 0px 20px;
+    width: 570px;
+    height: 510px;
+    border-radius: 20px;
+    border : 2px solid black;
+    box-shadow: 0px 0px 20px rgba(0,0,0,1);
+  }
+
+  form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  input{
+    width: 60%;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 23px;
+    font-weight: bold;
+    font-family: 'Dancing Script', sans-serif;
+  }
+
+  #updateDataButton{
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+    border-radius: 10px;
+    font-family: 'Dancing Script', sans-serif;
+    margin-top: 10px;
+    background-color: rgb(18, 92, 42);
+    width: 60%;
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
+    font-size: 28px;
+  }
+
+  input::placeholder{
+    color:#b4b0ff;
+    padding: 5px;
+  }
+  
+  /* Close button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 60px;
+    font-weight: bold;
+    transform: translate(0px,-30px);
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    
+  }
+
+  #updateTitle{
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  #updateLine{
+    margin-top: 5px;
+    width: 60%;
+    height: 2px;
+    background-color: #000;
+  }
+
+  @media (max-width: 670px) {
+    .modal-content {
+    width:90%;
+    }
+
+}
