--- a/css/collection-list.css
+++ b/css/collection-list.css
@@ -280,7 +280,6 @@ button:hover, a:hover {
     width: 100%;
     height: 100%;
 
-    align-items: center;
     justify-content: center;
 
     background-color: rgba(0, 0, 0, 0.5);
@@ -298,6 +297,7 @@ button:hover, a:hover {
     border-radius: 20px;
     border : 2px solid black;
     box-shadow: 0px 0px 20px rgba(0,0,0,1);
+    margin-top: 300px;
   }
 
   form{
@@ -346,7 +346,16 @@ button:hover, a:hover {
   .close:focus {
     color: black;
     text-decoration: none;
-    
+  }
+
+  .collectionClose{
+    display: none;
+    transform: translate(+100px, -20px);
+    float: right;
+    opacity: 0;
+    font-size: 60px;
+    font-weight: bold;
+    color: black;
   }
 
   #updateTitle{
@@ -362,6 +371,9 @@ button:hover, a:hover {
   }
 
   @media (max-width: 670px) {
+    input{
+        width: 80%;
+    }
     .modal-content {
     width:90%;
     }
