--- a/css/collection-list.css
+++ b/css/collection-list.css
@@ -42,6 +42,19 @@ main{
     box-shadow: 0 0px 20px rgba(0, 0, 0, 1);
 }
 
+#no-followers-message {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /* display: none;  */
+    font-size: 2rem;
+    color: #333;
+    padding: 20px;
+    background-color: #4CAF50;
+    border-radius: 32px;
+    border: 2px solid white;
+    box-shadow: 0 0px 20px rgba(0, 0, 0, 1);
+}
+
 button:hover, a:hover {
     opacity: 0.7;
 } 
@@ -379,3 +392,13 @@ button:hover, a:hover {
     }
 
 }
+
+.floating-message {
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 1);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1001;
+  }
