--- a/css/collection-list.css
+++ b/css/collection-list.css
@@ -6,7 +6,6 @@ button {
     color: white;
     background-color: #000;
     text-align: center;
-    cursor: pointer;
     width: 100%;
     font-size: 18px;
 }
@@ -174,7 +173,6 @@ button:hover, a:hover {
     border: none;
     border-radius: 5px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-    cursor: pointer; 
     transition: background-color 0.3s ease; 
     margin: 5px;
 }
@@ -256,6 +254,7 @@ button:hover, a:hover {
 }
 
 #addPlantButton {
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
     position: fixed;
     right: 20px;
     top: 120px;
@@ -271,7 +270,6 @@ button:hover, a:hover {
     line-height: 40px; 
     text-align: center; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
-    cursor: pointer;
     z-index: 1000; 
 }
 
@@ -330,6 +328,10 @@ button:hover, a:hover {
     font-family: 'Dancing Script', sans-serif;
   }
 
+  #editButton, #followButton{
+    transition: all 0.3s;
+  }
+
   #updateDataButton{
     box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
     border-radius: 10px;
@@ -339,6 +341,7 @@ button:hover, a:hover {
     width: 60%;
     cursor: url(../images/cursors/PottedPlantNS.cur),auto;
     font-size: 28px;
+    transition: all 0.3s;
   }
 
   input::placeholder{
@@ -401,4 +404,21 @@ button:hover, a:hover {
     padding: 10px;
     border-radius: 5px;
     z-index: 1001;
+    font-size: 20px;
   }
+
+  .f-wrapper--1 {
+    transform: translate(0px,10px);
+    left: 90%;
+}
+
+.f-wrapper--2 {
+    transform: translate(0px,22px);
+    left:9%;
+}
+
+.f-wrapper--3 {
+    transform:  rotate(-15deg) translate(-70px, 0px);
+    top:60px;
+    z-index: 3;
+}
