--- a/css/plant_profile.css
+++ b/css/plant_profile.css
@@ -89,10 +89,13 @@ main{
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+    justify-content: center;
+
 }
 
 /* Labels and content */
 .label {
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
     font-weight: bold; 
     font-size:25px;
     margin-bottom: 0.25rem;
@@ -104,7 +107,8 @@ main{
     border-bottom: 2px solid var(--primary-color);
     padding: 0.5rem 0;
     margin-bottom: 1rem;
-    width: 100%
+    width: 100%;
+    
 }
 
 .container-buttons{
@@ -193,4 +197,174 @@ main{
     }
 }
 
+.floating-message {
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 1);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1001;
+    font-size:20px;
+}
 
+/* Hidden by default */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    justify-content: center;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px); 
+
+  }
+  
+  /* Modal content */
+  .modal-content {
+    background-color: white;   /*#a0e090b9*/
+
+    padding: 20px 20px 0px 20px;
+    width: 570px;
+    height: 500px;
+    border-radius: 20px;
+    border : 2px solid black;
+    box-shadow: 0px 0px 20px rgba(0,0,0,1);
+    margin-top: 300px;
+  }
+
+  form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  input{
+    width: 60%;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 23px;
+    font-weight: bold;
+    font-family: 'Dancing Script', sans-serif;
+  }
+
+  input::placeholder{
+    color:#b4b0ff;
+    padding: 5px;
+  }
+
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 60px;
+    font-weight: bold;
+    transform: translate(0px,-30px);
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+  }
+
+  #updateTitle{
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  #updateLine{
+    margin-top: 5px;
+    width: 60%;
+    height: 2px;
+    background-color: #000;
+  }
+
+  #updateDataButton{
+    transition: all 0.3s;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+    border-radius: 10px;
+    font-family: 'Dancing Script', sans-serif;
+    margin-top: 10px;
+    background-color: rgb(18, 92, 42);
+    width: 60%;
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
+    font-size: 28px;
+    color:white;
+  }
+
+  #updateDataButton:hover{
+    opacity: 0.7;
+  }
+
+  @media (max-width: 670px) {
+    input{
+        width: 80%;
+    }
+    .modal-content {
+    width:90%;
+    }
+
+}
+
+
+.f-wrapper--2 {
+    transform: translate(0px,11px);
+}
+
+.f-wrapper--3 {
+    transform:  rotate(-15deg) translate(-70px, 0px);
+    top:60px;
+    z-index: 3;
+}
+
+#hashtags{
+    font-size: 23px;
+}
+
+#collection-name{
+    font-size: 23px;
+}
+
+#date-collection{
+    font-size: 23px;
+}
+
+#collector{
+    font-size: 21px;
+}
+
+#common-name{
+    font-size: 23px;
+}
+
+#scientific-name{
+    font-size: 23px;
+}
+
+#family{
+    font-size: 23px;
+}
+
+#genus{
+    font-size: 23px;
+}
+
+#species{
+    font-size: 23px;
+}
+
+#place{
+    font-size: 23px;
+}
+
+#color-plant{
+    font-size: 23px;
+}
