--- a/css/template.css
+++ b/css/template.css
@@ -4,6 +4,13 @@
     src: url('../fonts/Playful/PlayfairDisplay-VariableFont_wght.ttf') format("truetype"),
 } */
 
+*{
+    cursor: url(../images/cursors/PottedPlantNS.cur),auto;
+    padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 .gradient_Text{
     background-image: linear-gradient(#E2F4C5, #a0e090);
     color: transparent;
@@ -11,11 +18,6 @@
     -webkit-background-clip: text;
 }
 
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-}
 
 body {
     display: flex;
@@ -244,7 +246,6 @@ header a:hover{
     width: 60px;
     height: 60px;
     background: #58629b;
-    cursor: pointer;
 }
 
 .right{
