--- a/css/login.css
+++ b/css/login.css
@@ -42,24 +42,6 @@ main {
 	overflow: hidden;
 }
 
-@media (max-width: 850px) {
-    .login{
-        position: relative;
-        
-        width:90%;
-        height: 500px;
-    
-        background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
-        
-        border-radius: 13%;
-        border: #E2F4C5 2px solid;
-    
-        top:50%;
-        transform: translate(0%,0%);
-        opacity: 90%;
-    }
-}
-
 .headerLogin
 {
     margin-top: 20px;
@@ -275,6 +257,36 @@ form p
     font-size: 22px;
 }
 
+#resetPassword{
+    text-align: center;
+    position: absolute;
+    top:90%;
+    width:140px;
+    padding: 3px 5px 3px 5px;
+    border-radius: 25%;
+    border:0px solid black;
+    color: #A8CD9F;
+    font-weight:bold;
+    font-size: 20px;
+    background-color: #e7eedb;  
+    transition: width 0.1s ease-in-out;
+    font-family: 'Dancing Script', sans-serif;
+}
+
+#resetPassword:hover{
+ 
+    width:160px;
+    color:#58A399;
+    transition: 200ms;
+    font-size: 22px;
+}
+
+@media (max-width: 860px) {
+    #resetPassword{
+        margin-top: 10px;
+    }
+}
+
 @media (max-width: 600px) {
     #register{
         transform: translate(-38%,-49%);
@@ -363,3 +375,141 @@ footer {
     }
   
   }
+
+
+
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .modal-content {
+    display: flex;
+    height: 270px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
+    background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
+    margin: 15% auto; 
+    padding: 20px;
+    width: 800px; 
+    border-radius: 32px;
+    border: #E2F4C5 2px solid;
+    opacity: 90%;
+  }
+
+  #resetLine{
+
+    width:0;
+    height: 0;
+    margin-left: auto;
+    margin-right: auto;
+    border-left:  max(13vw, 170px) solid transparent;
+    border-right: max(13vw, 170px) solid transparent;
+    border-bottom: 4px solid #A8CD9F;
+    margin-bottom: 30px;
+  }
+
+  #resetPasswordForm{
+    transform: translate(0px,-30px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
+  }
+
+  #resetEmail
+    {
+        position: relative;
+        height: 25px;
+        width:80%;
+        font-size: 20px;
+        color:#496989;
+        font-weight: bold;
+        text-align: center;
+        border-radius: 10px;
+        border:0px solid black;
+        -webkit-text-fill-color:#496989;
+        background-color: #e6f0d6;
+        margin-bottom: 20px;
+    }
+
+    #resetEmail:focus
+    {
+    background-color: #A8CD9F;
+    transition: 200ms;
+    }
+
+    #resetEmail::placeholder{
+        font-family: 'Dancing Script', sans-serif;
+    }
+
+    #resetTitle{
+        font-size: 50px;
+        font-weight: bold;
+    }
+
+    #resetSubmit{
+        position: absolute;
+        height: 30px;
+        border-radius: 10px;
+        border:0px solid black;
+        color: #A8CD9F;
+        padding: 3px 10px;
+        font-weight:bold;
+        font-size: 20px;
+        background-color: #e7eedb;  
+        transition: all 0.1s ease-in-out;
+        font-family: 'Dancing Script', sans-serif;
+        margin-bottom: 20px;
+        box-sizing: content-box; 
+        top:105%;
+        }
+    
+    #resetSubmit:hover
+    {
+        color:#58A399;
+        height: 32px;
+        transition: 200ms;
+        font-size: 22px;
+    }
+
+    @media (max-width: 850px) {
+        .login{
+            position: relative;
+            
+            width:90%;
+            height: 500px;
+        
+            background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
+            
+            border-radius: 13%;
+            border: #E2F4C5 2px solid;
+        
+            top:50%;
+            transform: translate(0%,0%);
+            opacity: 90%;
+        }
+        .modal-content{
+            width:90%;
+        }
+        #resetTitle{
+            font-size: 40px;
+        }
+    }
+
+    @media (max-width: 700px) {
+        #resetTitle{
+            font-size: 30px;
+        }
+    }
